--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="w3-panel">
+        <div class="w3-row w3-panel">
+            <a href="/create">Create</a>
+        </div>
         <div class="w3-row">
             <table class="w3-table-all">
                 <tr>
